<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:paddingTop="15dp"
        android:id="@+id/txt_titulo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carne"
        android:id="@+id/txt_carne_seleccion"
        android:paddingTop="15dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sel_res"
            android:text="@string/carne_res"
            android:layout_gravity="center"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sel_carneDoble"
            android:text="@string/carne_doble"
            android:layout_gravity="center"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sel_veg"
            android:text="@string/carne_veg"
            android:layout_gravity="center"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sel_vegDoble"
            android:text="@string/carne_vegDoble"
            android:layout_gravity="center"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_sel_extra"
        android:text="@string/ing_extras"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sel_catsup"
        android:text="@string/catsup"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sel_mostaza"
        android:text="@string/mostaza"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sel_queso"
        android:text="@string/queso"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sel_pepinillo"
        android:text="@string/pepinillos"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_enviar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_enviar_txt"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>