<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_confirmar_pedido"
        android:title="@string/action_confirmar_pedido"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_cancelar_pedido"
        android:title="@string/action_cancelar_pedido"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_editar_pedido"
        android:title="@string/action_editar_pedido"
        app:showAsAction="never"/>
</menu>